--- a/ProjectFiles/react_files/firebase.json
+++ b/ProjectFiles/react_files/firebase.json
@@ -1,6 +1,6 @@
 {
     "hosting": {
-        "public": "public",
+        "public": "firebaseHost",
         "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
         "rewrites": [
             {
