--- a/ProjectFiles/react_files/package.json
+++ b/ProjectFiles/react_files/package.json
@@ -41,7 +41,8 @@
     },
     "devDependencies": {
         "@testing-library/jest-dom": "^4.2.4",
+        "@testing-library/react": "^9.5.0",
         "@testing-library/user-event": "^7.2.1",
-        "@testing-library/react": "^9.5.0"
+        "cypress": "^7.1.0"
     }
 }
