--- a/react_files/package.json
+++ b/react_files/package.json
@@ -5,16 +5,16 @@
     "dependencies": {
         "bootstrap": "^4.5.3",
         "firebase": "^8.2.6",
-        "node-sass": "^4.14.1",
-        "react": "^16.14.0",
+        "node-sass": "^6.0.1",
+        "react": "^17.0.2",
         "react-bootstrap": "^1.4.0",
-        "react-dom": "^16.14.0",
+        "react-dom": "^17.0.2",
         "react-redux": "^7.2.2",
         "react-redux-firebase": "^3.10.0",
-        "react-router-dom": "^5.2.0",
-        "react-scripts": "3.4.3",
+        "react-router-dom": "^6.0.0",
+        "react-scripts": "^4.0.3",
         "redux": "^4.0.5",
-        "redux-firestore": "^0.14.0",
+        "redux-firestore": "^0.15.0",
         "source-map-explorer": "^2.5.2"
     },
     "scripts": {
@@ -40,11 +40,11 @@
         ]
     },
     "devDependencies": {
-        "@testing-library/jest-dom": "^4.2.4",
-        "@testing-library/react": "^9.5.0",
-        "@testing-library/user-event": "^7.2.1",
-        "cypress": "^7.1.0",
-        "cypress-firebase": "^1.8.0",
-        "firebase-admin": "^9.6.0"
+        "@testing-library/jest-dom": "^5.15.0",
+        "@testing-library/react": "^12.1.2",
+        "@testing-library/user-event": "^13.5.0",
+        "cypress": "^8.7.0",
+        "cypress-firebase": "^2.0.0",
+        "firebase-admin": "^10.0.0"
     }
 }
