--- a/react_files/package.json
+++ b/react_files/package.json
@@ -9,6 +9,7 @@
         "react": "^17.0.2",
         "react-bootstrap": "^1.4.0",
         "react-dom": "^17.0.2",
+        "react-helmet-async": "^1.2.2",
         "react-redux": "^7.2.2",
         "react-redux-firebase": "^3.10.0",
         "react-router-dom": "^5.2.0",
