--- a/react_files/package.json
+++ b/react_files/package.json
@@ -13,7 +13,7 @@
         "react-redux": "^7.2.2",
         "react-redux-firebase": "^3.10.0",
         "react-router-dom": "^5.2.0",
-        "react-scripts": "^4.0.3",
+        "react-scripts": "5.0.0",
         "redux": "^4.0.5",
         "redux-firestore": "^0.15.0",
         "source-map-explorer": "^2.5.2"
@@ -44,8 +44,11 @@
         "@testing-library/jest-dom": "^5.15.0",
         "@testing-library/react": "^12.1.2",
         "@testing-library/user-event": "^13.5.0",
+        "autoprefixer": "^10.4.0",
         "cypress": "^8.7.0",
         "cypress-firebase": "^2.0.0",
-        "firebase-admin": "^9.6.0"
+        "firebase-admin": "^9.6.0",
+        "postcss": "^8.4.5",
+        "tailwindcss": "^3.0.8"
     }
 }
